Chat message bug alignment.

--- a/sulo-style/scss/stream/chat.scss
+++ b/sulo-style/scss/stream/chat.scss
@@ -14,13 +14,16 @@
 		flex-direction: column;
 		justify-content: flex-end;
 		flex: 1 0 auto;
+
 	}
 
-	.message-list-container {
+	.messages-list {
+		margin:0;
 		position: absolute;
-		max-height: 100%;
-		display: flex;
-		flex-direction: column-reverse;
+		margin-left: 0;
+		max-height: 100%; 
+		width: 100%;
+		bottom: 0;
 
 		-webkit-overflow-scrolling: touch;
 		overflow-y: scroll;
@@ -37,11 +40,6 @@
 		&::-webkit-scrollbar-thumb {
       		background: map-get($foundation-palette,green);
 		}
-	}
-
-	.messages-list {
-		margin-bottom: 0.5rem;
-		margin-left: 0;
 	}
 	.message-container {
 		padding: 0.5rem;
